--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -681,7 +681,7 @@ h6 {
   display: block;
   /* margin-top: 1px; */
   padding: 21px;
-  line-height: 5px;
+  /* line-height: 5px; */
   margin-top:0px !important;
 }
 
